--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,38 +1,85 @@
-      </article>
-    </section>
-    <div id="push"></div>
-  </div>
-  <footer id="contact">
-    <article>
-      <div class="row">
-        <div class="columns large-6 small-12">
-            <h2>Here is how you can get in touch</h2>
-        </div>
-        <div class="columns large-6 small-12">
-          <div class="columns small-6 large-5">
-            <h3>Contact</h3>
-            <a href="tel:{{ site.contact.phone }}">{{ site.contact.phone }}</a>
-            <a href="mailto:{{ site.contact.email }}">{{ site.contact.email }}</a>
-          </div>
-          <div class="columns small-5 large-6 small-offset-1">
-            <h3>Address</h3>
-            <a href="#">{{ site.contact.address.line1 }}<br />{{ site.contact.address.line2 }}</a>
+    <!-- Footer Wrapper -->
+      <div id="footer-wrapper" class="wrapper">
+        <div class="title">The Rest Of It</div>
+        <div class="container">
+          <div class="row">
+            <div class="12u">
+
+              <!-- Footer -->
+                <div id="footer">
+                  <header class="style1">
+                    <h2>Ipsum sapien elementum portitor?</h2>
+                    <p class="byline">
+                      Sed turpis tortor, tincidunt sed ornare in metus porttitor mollis nunc in aliquet.<br />
+                      Nam pharetra laoreet imperdiet volutpat etiam consequat feugiat.
+                    </p>
+                  </header>
+                  <hr />
+                  <div>
+                    <div class="row">
+                      <div class="12u">
+                      
+                        <!-- Contacts -->
+                          <section class="footer-two">
+                            <div class="feature-list feature-list-small">
+                              <div>
+                                <div class="row">
+                                  <div class="3u">
+                                    <section>
+                                      <h3 class="fa fa-home">Mailing Address</h3>
+                                      <p>
+                                        Untitled Corporation<br />
+                                        1234 Somewhere Rd #987<br />
+                                        Nashville, TN 00000-0000
+                                      </p>
+                                    </section>
+                                  </div>
+                                  <div class="3u">
+                                    <section>
+                                      <h3 class="fa fa-comment">Social</h3>
+                                      <p>
+                                        <a href="http://twitter.com/n33co">@n33co</a><br />
+                                        <a href="http://dribbble.com/n33">dribbble.com/n33</a><br />
+                                        <a href="#">facebook.com/untitled</a>
+                                      </p>
+                                    </section>
+                                  </div>
+                                </div>
+                                <div class="row">
+                                  <div class="3u">
+                                    <section>
+                                      <h3 class="fa fa-envelope">Email</h3>
+                                      <p>
+                                        <a href="#">info@untitled.tld</a>
+                                      </p>
+                                    </section>
+                                  </div>
+                                  <div class="3u">
+                                    <section>
+                                      <h3 class="fa fa-phone">Phone</h3>
+                                      <p>
+                                        (000) 555-0000
+                                      </p>
+                                    </section>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                          </section>
+                        <!-- /Contacts -->
+                          
+                      </div>
+                    </div>
+                  </div>
+                  <hr />
+                </div>
+              <!-- /Footer -->
+            
+            </div>
           </div>
         </div>
       </div>
-    </article>
-  </footer>
-  <footer id="bottom">
-    <article>
-      <div class="columns large-12">
-          <span>&copy; Copyright  {{ site.name }} {{ site.time | date:"%Y" }}</span>
-          <span>|</span>
-          <span>Made with <b class="heart">♥</b> in DC</span>
-      </div>
-    </article>
-  </footer>
+    <!-- /Footer Wrapper -->
 
-{% include scripts.html %}
-
-</body>
+  </body>
 </html>
