--- a/_includes/header.html
+++ b/_includes/header.html
@@ -55,4 +55,9 @@
     <link rel="stylesheet" href="/assets/css/style-desktop.css" />
   </noscript>
 
+  <style>
+    img { max-width: 100%; }
+    p, ul, ol, dl, table, blockquote, form { margin-bottom: 0.8em; }
+  </style>
+
 </head>
