--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,4 +2,4 @@
                         <li><a href="/about">About</a></li>
                         <li><a href="/articles/">Articles</a></li>
                         <li><a href="/thoughts/">Thoughts</a></li>
-                        <li><a href="/thoughts/">Misc</a></li>
+                        <li><a href="/misc/">Misc</a></li>
