--- a/_includes/header.html
+++ b/_includes/header.html
@@ -38,8 +38,7 @@
     <nav role="navigation">
         <a href="/" title="Homepage of www.helentootsi.com" class="logo" target="_self"><img src="/assets/images/logo.png" /></a>
         <ul>
-            <li class="fb"><a href=""><i class="icon-facebook"></i></a></li>
-            <li class="tw"><a href=""><i class="icon-twitter"></i></a></li>
+            <li class="fb"><a href=""><i class="icon-linkedin"></i></a></li>
             <li class="gp"><a href=""><i class="icon-instagram"></i></a></li>
             <li class="ro"><button id="trigger-overlay" type="button"><i class="icon-reorder"></i></button></li>
         </ul>
