--- a/assets/_less/modules/_navigation.less
+++ b/assets/_less/modules/_navigation.less
@@ -5,7 +5,7 @@
     display: block;
     position: fixed;
     top:0;
-    padding: 0 2rem;
+    padding: 0;
     z-index: 10;
     height: 3.125rem;
     background: @black-dark;
