Fixed iPhone menu height

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -44,7 +44,7 @@
         </ul>
     </nav> 
     <div id="overlay-menu" class="overlay-menu overlay-scale">
-        <button type="button" id="overlay-close">Close</button>
+        <button type="button" id="overlay-close">x</button>
         <nav>
             <ul>
                 <li><a href="/test">Link 1</a></li>
