--- a/assets/_less/modules/_navigation.less
+++ b/assets/_less/modules/_navigation.less
@@ -87,18 +87,15 @@
     background: rgba(153,204,51,0.9);
     z-index: 9999;
     #overlay-close {
-        width: 80px;
-        height: 80px;
+        font-weight: 300 !important;
+        font-size: 3em;
         position: absolute;
+        background: none;
         right: 20px;
         top: 20px;
-        overflow: hidden;
-        border: none;
-        background: url(../images/cross.png) no-repeat center center;
-        text-indent: 200%;
-        color: transparent;
         outline: none;
         z-index: 100;
+        color: @white;
     }
     nav {
         text-align: center;
@@ -118,11 +115,11 @@
                 display: block;
                 height: 20%;
                 height: calc(100% / 5);
-                min-height: 54px;
+                min-height: 3em;
                 -webkit-backface-visibility: hidden;
                 backface-visibility: hidden;
                 a {
-                    font-size: 54px;
+                    font-size: 3em;
                     font-weight: 300;
                     display: block;
                     color: #fff;
@@ -156,9 +153,9 @@
 @media screen and (max-height: 30.5em) {
     .overlay-menu nav {
         height: 70%;
-        font-size: 34px;
+        font-size: 1.125em;
     }
     .overlay-menu ul li {
-        min-height: 34px;
+        min-height: 2.125em;
     }
 }
