--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -604,18 +604,15 @@ textarea {
   z-index: 9999;
 }
 .overlay-menu #overlay-close {
-  width: 80px;
-  height: 80px;
+  font-weight: 300 !important;
+  font-size: 3em;
   position: absolute;
+  background: none;
   right: 20px;
   top: 20px;
-  overflow: hidden;
-  border: none;
-  background: url(../images/cross.png) no-repeat center center;
-  text-indent: 200%;
-  color: transparent;
   outline: none;
   z-index: 100;
+  color: #f1f2f2;
 }
 .overlay-menu nav {
   text-align: center;
@@ -637,12 +634,12 @@ textarea {
   display: block;
   height: 20%;
   height: calc(20%);
-  min-height: 54px;
+  min-height: 3em;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
 }
 .overlay-menu nav ul li a {
-  font-size: 54px;
+  font-size: 3em;
   font-weight: 300;
   display: block;
   color: #fff;
@@ -672,10 +669,10 @@ textarea {
 @media screen and (max-height: 30.5em) {
   .overlay-menu nav {
     height: 70%;
-    font-size: 34px;
+    font-size: 1.125em;
   }
   .overlay-menu ul li {
-    min-height: 34px;
+    min-height: 2.125em;
   }
 }
 .fb {
