--- a/_layouts/slider.html
+++ b/_layouts/slider.html
@@ -2,68 +2,7 @@
     <div id="slides">
         <div class="slides">
             <ul class="slides-container">
-                <li title="this is a text element">
-                    <div class="container" role="main">
-                        <h1>This is a major title</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque mollis ligula ante, vitae volutpat nisi sollicitudin ac. Nunc sodales ornare ligula, vel accumsan augue dictum condimentum. Nam varius dui vitae nulla ultrices ullamcorper. Cras pharetra nisi sed pellentesque fringilla. In gravida volutpat est, nec placerat purus venenatis sed. Ut interdum ipsum in adipiscing varius. Proin et facilisis eros. Maecenas dolor ipsum, laoreet ut ornare non, ullamcorper ac leo. Nulla magna lectus, ultrices et eros id, lacinia commodo enim. Proin sodales sapien volutpat, consectetur dui nec, egestas nunc. Suspendisse bibendum dolor fringilla quam elementum vestibulum a imperdiet turpis.</p>
-                        <p>Nulla magna lectus, ultrices et eros id, lacinia commodo enim. Proin sodales sapien volutpat, consectetur dui nec, egestas nunc. Suspendisse bibendum dolor fringilla quam elementum vestibulum a imperdiet turpis.</p>
-                        <h1>This is a major title</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque mollis ligula ante, vitae volutpat nisi sollicitudin ac. Nunc sodales ornare ligula, vel accumsan augue dictum condimentum. Nam varius dui vitae nulla ultrices ullamcorper. Cras pharetra nisi sed pellentesque fringilla. In gravida volutpat est, nec placerat purus venenatis sed. Ut interdum ipsum in adipiscing varius. Proin et facilisis eros. Maecenas dolor ipsum, laoreet ut ornare non, ullamcorper ac leo. Nulla magna lectus, ultrices et eros id, lacinia commodo enim. Proin sodales sapien volutpat, consectetur dui nec, egestas nunc. Suspendisse bibendum dolor fringilla quam elementum vestibulum a imperdiet turpis.</p>
-                        <p>Nulla magna lectus, ultrices et eros id, lacinia commodo enim. Proin sodales sapien volutpat, consectetur dui nec, egestas nunc. Suspendisse bibendum dolor fringilla quam elementum vestibulum a imperdiet turpis.</p>
-                        <h1>This is a major title</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque mollis ligula ante, vitae volutpat nisi sollicitudin ac. Nunc sodales ornare ligula, vel accumsan augue dictum condimentum. Nam varius dui vitae nulla ultrices ullamcorper. Cras pharetra nisi sed pellentesque fringilla. In gravida volutpat est, nec placerat purus venenatis sed. Ut interdum ipsum in adipiscing varius. Proin et facilisis eros. Maecenas dolor ipsum, laoreet ut ornare non, ullamcorper ac leo. Nulla magna lectus, ultrices et eros id, lacinia commodo enim. Proin sodales sapien volutpat, consectetur dui nec, egestas nunc. Suspendisse bibendum dolor fringilla quam elementum vestibulum a imperdiet turpis.</p>
-                        <p>Nulla magna lectus, ultrices et eros id, lacinia commodo enim. Proin sodales sapien volutpat, consectetur dui nec, egestas nunc. Suspendisse bibendum dolor fringilla quam elementum vestibulum a imperdiet turpis.</p>
-                    </div>
-                </li>
-                <li title="this is a text element">
-                    <img src="/assets/images/photos/2.jpg" alt="" class="background" />
-                    <div class="container">
-                        Slide two
-                    </div>
-                </li>
-                <li title="this is a text element">
-                    <img src="/assets/images/photos/3.jpg" alt="" />
-                    <div class="container">
-                        Slide three
-                    </div>
-                </li>
-                <li title="this is a text element">
-                    <img src="/assets/images/photos/2.jpg" alt="" />
-                    <div class="container">
-                        Slide two
-                    </div>
-                </li>
-                <li title="this is a text element">
-                    <img src="/assets/images/photos/3.jpg" alt="" />
-                    <div class="container">
-                        Slide three
-                    </div>
-                </li>
-                <li title="this is a text element">
-                    <img src="/assets/images/photos/2.jpg" alt="" />
-                    <div class="container">
-                        Slide two
-                    </div>
-                </li>
-                <li title="this is a text element">
-                    <img src="/assets/images/photos/3.jpg" alt="" />
-                    <div class="container">
-                        Slide three
-                    </div>
-                </li>
-                <li title="this is a text element">
-                    <img src="/assets/images/photos/2.jpg" alt="" />
-                    <div class="container">
-                        Slide two
-                    </div>
-                </li>
-                <li title="this is a text element">
-                    <img src="/assets/images/photos/3.jpg" alt="" />
-                    <div class="container">
-                        Slide three
-                    </div>
-                </li>
-
+{{ content }}
             </ul>
             <nav class="slides-navigation">
                 <a href="#" class="next"><i class="icon-arrow-right"></i></a>
