--- a/assets/_less/core/_base.less
+++ b/assets/_less/core/_base.less
@@ -54,9 +54,16 @@ h1,h2,h3,h4,h5,h6,p {
 }
 h1 {
     font-size: 3em;
+    .font-display;
 }
 h2 {
     font-size: 2em;
+}
+h3 {
+    font-size: 1.8em;
+}
+h4 {
+    font-size: 1.6em;
 }
 
 p {
@@ -96,9 +103,6 @@ p {
 // Colour Scheme
 // --------------------------------------------------------------------------
 
-#work {
-
-}
 
 
 // Home Page Styles
@@ -125,14 +129,17 @@ p {
         .inner;
         color: @white;
         position: relative;
+        padding: 6em 0 1em;
         z-index: 2;
         &.dark {
             color: @black-light;
         }
         h1 {
+            .font-display;
+            font-size: 3em;
             line-height: 1.5;
             text-transform: uppercase;
-            letter-spacing: 0.5rem;
+            letter-spacing: 1rem;
         }
     }
     .logo {
