--- a/assets/_less/core/_fonts.less
+++ b/assets/_less/core/_fonts.less
@@ -22,7 +22,19 @@
 // Ubuntu - display font
 // --------------------------------------------------------------------------
 
-.font-display {font-family: 'Ubuntu',  Helvetica, Verdana, Arial, sans-serif;}
+@font-face {
+    @font-name: 'adam.cg_pro-webfont';
+    font-family: 'adam.cg_proregular';
+    src:url('../fonts/@{font-name}.eot');
+    src:url('../fonts/@{font-name}.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/@{font-name}.woff') format('woff'),
+        url('../fonts/@{font-name}.ttf') format('truetype'),
+        url('../fonts/@{font-name}.svg#icomoon') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+.font-display {font-family: 'adam.cg_proregular',  Helvetica, Verdana, Arial, sans-serif;}
 
 
 
