--- a/assets/_less/core/_responsive.less
+++ b/assets/_less/core/_responsive.less
@@ -5,6 +5,12 @@
     body {
         font-size: 70%;
     }
+    .home article h1 {
+        font-size: 2em;
+    }
+    .home .logo {
+        max-width: 270px;
+    }
     .mobile {
         display: none;
     }
@@ -30,6 +36,9 @@
 @media only screen and (min-width: 48em) {
     body {
         font-size: 90%;
+    }
+    .home article h1 {
+        font-size: 3em;
     }
     .desktop {
         display: block !important;
