--- a/assets/_less/modules/_navigation.less
+++ b/assets/_less/modules/_navigation.less
@@ -84,11 +84,11 @@
     height: 100%;
     top: 0;
     left: 0;
-    background: rgba(153,204,51,0.9);
+    background: fade(@color3, 90%);
     z-index: 9999;
     #overlay-close {
         font-weight: 300 !important;
-        font-size: 3em;
+        font-size: 2.5em;
         position: absolute;
         background: none;
         right: 20px;
@@ -119,14 +119,14 @@
                 -webkit-backface-visibility: hidden;
                 backface-visibility: hidden;
                 a {
-                    font-size: 3em;
+                    font-size: 1.75em;
                     font-weight: 300;
                     display: block;
                     color: #fff;
-                    -webkit-transition: color 0.2s;
-                    transition: color 0.2s;
+                    .transition;
                     &:hover, &:focus {
-                        color: #f0f0f0;
+                        color: @white-dark;
+                        .scale(1.15);
                     }
                 }
             }
@@ -147,15 +147,5 @@
         transform: scale(1);    
         -webkit-transition: -webkit-transform 0.4s, opacity 0.4s;
         transition: transform 0.4s, opacity 0.4s;
-    }
-}
-
-@media screen and (max-height: 30.5em) {
-    .overlay-menu nav {
-        height: 70%;
-        font-size: 1.125em;
-    }
-    .overlay-menu ul li {
-        min-height: 2.125em;
     }
 }
