Fixed logo size issue

--- a/assets/_less/core/_responsive.less
+++ b/assets/_less/core/_responsive.less
@@ -40,6 +40,9 @@
     .home article h1 {
         font-size: 3em;
     }
+    .home .logo {
+        max-width: 460px !important;
+    }
     .desktop {
         display: block !important;
     }
