--- a/assets/_less/core/_base.less
+++ b/assets/_less/core/_base.less
@@ -48,8 +48,6 @@ a {
 // --------------------------------------------------------------------------
 
 h1,h2,h3,h4,h5,h6,p {
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
     text-align: center;
 }
 h1 {
@@ -67,15 +65,22 @@ h4 {
 }
 
 p {
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    font-size: 1rem;
+    padding-top: 1em;
+    padding-bottom: 1em;
+    font-size: 1em;
+    line-height: 1.8em;
+    &.date {
+        font-size: 1.4em;
+        line-height: 1;
+    }
 }
 
 [role="main"] {
     position: relative;
     height: 100%;
     max-width: @max-width;
+    padding-left: 5em;
+    padding-right: 5em;
     margin-left: auto;
     margin-right: auto;
     line-height: 1.5;
