--- a/assets/_less/core/_fonts.less
+++ b/assets/_less/core/_fonts.less
@@ -1,7 +1,11 @@
-// Ubuntu - display & text font
+// Font Import
 // --------------------------------------------------------------------------
 
-@import 'http://fonts.googleapis.com/css?family=Ubuntu:300,500,300italic';
+@import 'http://fonts.googleapis.com/css?family=Ubuntu:300,500,300italic|Varela+Round';
+
+
+// Ubuntu - display & text font
+// --------------------------------------------------------------------------
 
 .font-text {
     font-family: 'Ubuntu',  Helvetica, Verdana, Arial, sans-serif;
@@ -18,23 +22,10 @@
 }
 
 
-
-// Ubuntu - display font
+// Varela - display font
 // --------------------------------------------------------------------------
 
-@font-face {
-    @font-name: 'adam.cg_pro-webfont';
-    font-family: 'adam.cg_proregular';
-    src:url('../fonts/@{font-name}.eot');
-    src:url('../fonts/@{font-name}.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/@{font-name}.woff') format('woff'),
-        url('../fonts/@{font-name}.ttf') format('truetype'),
-        url('../fonts/@{font-name}.svg#icomoon') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-
-.font-display {font-family: 'adam.cg_proregular',  Helvetica, Verdana, Arial, sans-serif;}
+.font-display {font-family: 'Varela Round',  Helvetica, Verdana, Arial, sans-serif;}
 
 
 
