--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,7 @@
     Author:   {{ site.seo.author }}
 
     Notes:    Congratulations! You are a nerd like us!
-                Maybe check out the github page?
+              Maybe check out the github page?
 
     Git:      http://www.github.com/helentootsi
 
@@ -27,6 +27,9 @@
     // -->
 
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel="shortcut icon" type="image/png" href="/assets/stylesheets/favicon.png" />
+    <meta name="robots" content="index, follow"/>
+
 
     <!-- CSS and Fonts  -->
     <link rel="stylesheet" href="/assets/stylesheets/style.css" />
