Fix to Responsive

--- a/assets/_less/core/_responsive.less
+++ b/assets/_less/core/_responsive.less
@@ -17,6 +17,10 @@
     .desktop {
         display: block;
     }
+    [role="main"] {
+        padding-left: 10px;
+        padding-right: 10px;
+    }
 }
 
 
@@ -26,6 +30,10 @@
 @media only screen and (min-width: 30em) {
     body {
         font-size: 80%;
+    }
+    [role="main"] {
+        padding-left: 20px;
+        padding-right: 20px;
     }
 }
 
@@ -51,6 +59,10 @@
     }
     .mobile, .mobile-inline {
         display: none !important;
+    }
+    [role="main"] {
+        padding-left: 30px;
+        padding-right: 30px;
     }
 }
 
