--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -1177,10 +1177,18 @@ nav.slides-pagination a:hover:after {
   .desktop {
     display: block;
   }
+  [role="main"] {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
 }
 @media only screen and (min-width: 30em) {
   body {
     font-size: 80%;
+  }
+  [role="main"] {
+    padding-left: 20px;
+    padding-right: 20px;
   }
 }
 @media only screen and (min-width: 48em) {
@@ -1202,6 +1210,10 @@ nav.slides-pagination a:hover:after {
   .mobile,
   .mobile-inline {
     display: none !important;
+  }
+  [role="main"] {
+    padding-left: 30px;
+    padding-right: 30px;
   }
 }
 @media only screen and (min-width: 64em) {
