--- a/assets/_less/core/_responsive.less
+++ b/assets/_less/core/_responsive.less
@@ -6,7 +6,7 @@
         font-size: 70%;
     }
     .home article h1 {
-        font-size: 2em;
+        font-size: 80%;
     }
     .home .logo {
         max-width: 270px;
@@ -18,8 +18,8 @@
         display: block;
     }
     [role="main"] {
-        padding-left: 10px;
-        padding-right: 10px;
+        padding-left: 10px !important;
+        padding-right: 10px  !important;
     }
 }
 
@@ -32,8 +32,8 @@
         font-size: 80%;
     }
     [role="main"] {
-        padding-left: 20px;
-        padding-right: 20px;
+        padding-left: 20px !important;
+        padding-right: 20px !important;
     }
 }
 
@@ -61,8 +61,8 @@
         display: none !important;
     }
     [role="main"] {
-        padding-left: 30px;
-        padding-right: 30px;
+        padding-left: 30px !important;
+        padding-right: 30px !important;
     }
 }
 
@@ -73,9 +73,13 @@
     body {
         font-size: 100%;
     }
+    [role="main"] {
+        padding-left: 40px !important;
+        padding-right: 40px !important;
+    }
 }
 
-// Phone Screens (Desktop)
+// Screens (Desktop)
 // --------------------------------------------------------------------------
 
 @media only screen and (min-width: 75em) {
