--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -1161,14 +1161,12 @@ nav.slides-pagination a:hover:after {
 #television nav.slides-pagination a:before {
   background: #a11918;
 }
-@media only screen and (min-width: 25em) {
+@media only screen and (max-width: 30em) {
   body {
     font-size: 70%;
   }
-  .home article h1 {
-    font-size: 80%;
-  }
-  .home .logo {
+  .logo {
+    width: 100%;
     max-width: 270px;
   }
   .mobile {
@@ -1182,16 +1180,17 @@ nav.slides-pagination a:hover:after {
     padding-right: 10px  !important;
   }
 }
-@media only screen and (min-width: 30em) {
+@media only screen and (max-width: 48em) {
   body {
     font-size: 80%;
   }
   [role="main"] {
+    font-size: 80%;
     padding-left: 20px !important;
     padding-right: 20px !important;
   }
 }
-@media only screen and (min-width: 48em) {
+@media only screen and (max-width: 64em) {
   body {
     font-size: 90%;
   }
@@ -1223,10 +1222,5 @@ nav.slides-pagination a:hover:after {
   [role="main"] {
     padding-left: 40px !important;
     padding-right: 40px !important;
-  }
-}
-@media only screen and (min-width: 75em) {
-  body {
-    font-size: 100%;
   }
 }
