Fixed Issue with favicon

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -27,7 +27,7 @@
     // -->
 
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel="shortcut icon" type="image/png" href="/assets/stylesheets/favicon.png" />
+    <link rel="shortcut icon" type="image/png" href="/assets/images/favicon.png" />
     <meta name="robots" content="index, follow"/>
 
 
