--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -1026,6 +1026,7 @@ textarea {
   overflow-y: scroll;
   overflow-x: hidden;
   padding-top: 3em;
+  display: block;
   text-align: center;
 }
 .slides .slides-container .container figure {
@@ -1041,7 +1042,7 @@ textarea {
 }
 nav.slides-navigation {
   margin: 0 auto;
-  position: absolute;
+  position: fixed;
   z-index: 3;
   top: 46%;
   left: 0;
