--- a/assets/_less/modules/_blog.less
+++ b/assets/_less/modules/_blog.less
@@ -3,7 +3,7 @@
     padding-bottom: 0;
     margin-left: 0;
     padding-left: 0;
-    
+    margin-left: 0;
     list-style: none;
     .font-display;
     .date {
@@ -16,9 +16,7 @@
         border-bottom: 1px solid @color-blue;
         padding-bottom: 0.2rem;
     }
-    li {   
-        margin-bottom: 2rem;
-        margin-top: 2rem;
+    li {
         border-left: 3px solid @color-white--dark;
         padding-left: 2rem;
         h4 {
@@ -34,7 +32,7 @@
         li {
             display: block;
             border: none;
-            padding: 1.4rem 0;
+            padding: 1rem 0;
             &:first-child {
                 display: none !important;
             }
