--- a/assets/_less/modules/_blog.less
+++ b/assets/_less/modules/_blog.less
@@ -18,7 +18,7 @@
     }
     li {
         border-left: 3px solid @color-white--dark;
-        padding-left: 2rem;
+        padding-left: 0;
         h4 {
             padding-left: 0 !important;
             text-transform: uppercase;
